# tiralabra-tiedontiivistys-algoritmit

./: .coveragerc  .gitignore  .pylintrc  README.md  kalevala.txt  loremipsum.txt  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: Viikkoraportti 1  käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: Viikkoraportti 1  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md
src/: create_test_file.py  huffman_coding.py  lz77.py  node.py  ui_huffman.py  ui_lz77.py
src/huffman/: compress_huffman_coding.py  decompress_huffman_coding.py  initialize_huffman_coding.py  node.py  ui_huffman.py
src/performance_test/: huffman_performance.py  lz77_performance.py
src/tests/: create_test_file.py  test_huffman_coding.py  test_huffman_coding_kalevala.py  test_huffman_coding_small_and_nonsense.py  test_huffman_kalevala.py  test_huffman_small_and_nonsense.py  test_lz77.py  test_lz77_kalevala.py  test_lz77_small.py  test_lz77_small_and_nonsense.py
