[tool.poetry]
name = "tiralabra-tiedontiivistys-algoritmit"
version = "0.1.0"
description = ""
authors = ["Susanna Kinnunen <susanna.kinnunen@windowslive.com>"]
readme = "README.md"
packages = [{include = "tiralabra_tiedontiivistys_algoritmit"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
