[tool.poetry]
name = "tiralabra-tiedontiivistys-algoritmit"
version = "0.1.0"
description = ""
authors = ["Susanna Kinnunen <susanna.kinnunen@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
